@@ -24,19 +24,23 @@ class wxReportScheduler( wx.Printout ):
 		self.pages		= 1
 		
 		wx.Printout.__init__( self )
-			
+
 	def _GetScheduler( self, dc, day ):
 		"""
 		Return an in-memory wxSchedulerPrint() object for adding 
 		schedules and print on current wxDC
 		"""
+
 		scheduler = wxSchedulerPrint( dc )
 		scheduler.SetViewType( self._format )
 		scheduler.SetStyle( self._style )
 		scheduler.SetDrawer( self._drawerClass )
 		scheduler.SetDate( day )
 		scheduler.SetWeekStart( self._weekstart )
-		
+
+		for schedule in self._schedules:
+			scheduler.Add( schedule )
+
 		return scheduler
 
 	def OnPrintPage( self, page ):
@@ -46,21 +50,24 @@ class wxReportScheduler( wx.Printout ):
 		Note there is no difference on manage scheduler and schedules beetwen 
 		GUI and printing framework
 		"""
+
 		dc = self.GetDC()
 		scheduler = self._GetScheduler( dc, self._day )
-		
-		for schedule in self._schedules:
-			scheduler.Add( schedule )
 
-		size = scheduler.GetViewSize()
-		self.FitThisSizeToPage(size)
+		scheduler.Draw( None )
+		scheduler.Draw( page )
 
-		scheduler.Draw()
-		
 		return True
 
 	def HasPage( self, page ):
 		return page <= self.pages
 
 	def GetPageInfo( self ):
+		dc = self.GetDC()
+		scheduler = self._GetScheduler( dc, self._day )
+
+		scheduler.Draw( None )
+
+		self.pages = scheduler.pageCount
+
 		return ( 1, self.pages, 1, 1 )
